k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-system
  namespace: url-shortener-system
  labels:
    app: url-shortener-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-system
  template:
    metadata:
      labels:
        app: url-shortener-system
    spec:
      containers:
        - name: url-shortener-system
          image: ghcr.io/markmburu/url-shortener-system:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
      imagePullSecrets:
        - name: github-actions
